# Travel-analytics-data-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dbt.txt  requirements-dev.txt
.github/workflows/: ci.yml
ai_agent/: .env.example  README.md  main.py  requirements.txt
ai_skills/: README.md
ai_skills/metadata/: metrics.yaml  tables.yaml
ai_skills/prompts/: data_quality_analysis_skill.md  sql_generation_skill.md
airflow/: requirements.txt
airflow/dags/: ads_api_to_clickhouse.py  booking_api_to_clickhouse.py  data_quality_orders.py  data_quality_raw_bookings.py  data_quality_stg_bookings.py  dbt_travel_analytics.py  dq_results_to_mart.py  platform_daily_refresh.py  raw_ads_to_stg_ads.py  raw_cdc_orders_to_stg.py  raw_to_stg_bookings.py  raw_user_events_to_stg.py  stg_ads_orders_to_mart_campaign_performance.py  stg_ads_to_mart_ad_performance.py  stg_bookings_to_marts.py  stg_orders_to_mart_orders_status.py  stg_orders_to_mart_route_revenue.py  stg_user_events_to_mart_booking_conversion.py  stg_user_events_to_mart_funnel.py
airflow/dags_legacy_transformations/: raw_user_events_to_stg.py  stg_ads_to_mart_ad_performance.py  stg_bookings_to_marts.py  stg_orders_to_mart_route_revenue.py
debezium/: postgres_orders_connector.json
docs/: README.md  adr_template.md  architecture.md  data-flow.md  data_contracts.md  data_flow.md  documentation_standards.md  roadmap.md  runbook.md
docs/adr/: 001-kafka.md  (+7 more)
monitoring/: prometheus.yml
scripts/: init_platform.sh
sql/: init_clickhouse.sql  init_postgres.sql
(+81 files in other folders)
