[project]
name = "travel-analytics-data-platform"
version = "2.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "airflow/dags",
    ".",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"airflow/dags/common/ads_loader.py" = ["E402"]
